FIX: Use header background colour override on login page as well, to ensure dark logos are still legible. [q10412]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@16765 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1459,6 +1459,9 @@ p.LoginLinks {
     border-radius: 6px;
     border: 2px solid red;
 }
+#LoginHeader {
+    border-radius: 6px;
+}
 /* Manage External Shares */
 .FormFilter {
     width: 700px;
